k8s/app-b-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: app-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b
          image: localhost:5000/fastapi_app
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 500m
              memory: 700Mi
            requests:
              cpu: 300m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: app-b
spec:
  type: ClusterIP
  selector:
    app: app-b
  ports:
    - port: 8000
      targetPort: 8000
