k8s/app-c-deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: app-c
spec:
  type: ClusterIP
  selector:
    app: app-c
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: app-c-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-c
  template:
    metadata:
      labels:
        app: app-c
    spec:
      containers:
        - name: app-c
          image: localhost:5000/fastapi_app
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
              memory: 700Mi
            requests:
              cpu: 300m
              memory: 500Mi
